--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/victoralfred/hpa-system.git
+[submodule "shared"]
+	path = shared
+	url = https://github.com/victoralfred/hpa-shared.git
